grammar.js
        source_file: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                $.use_declaration,
                $.public_declaration,
                $.extern_declaration,
                $.type_alias_declaration,
                $.record_declaration,
                $.union_declaration,
                $.value_declaration,
                $.variable_declaration,
                $.function_declaration,
                $.test_declaration,
                $.comptime_if_statement,
                $.comptime_expression_statement,
            ),

        // =========================================================================
        // Comments
        // =========================================================================
        value_declaration: ($) =>
            seq(
                "val",
                field("name", $.identifier),
                ":",
                field("type", $._type),
                "=",
                field("value", $._expression),
                ";",
            ),

        // var name: type [= expr];
        function_declaration: ($) =>
            seq(
                "fun",
                optional($.method_receiver),
                field("name", $.identifier),
                optional($.type_parameters),
                $.parameter_list,
                optional(field("return_type", $._type)),
                $.block,
            ),

        parameter_list: ($) =>
            seq(
                "(",
                optional(sep1(choice($.parameter, $.variadic_parameter), ",")),
                ")",
            ),

        parameter: ($) =>
            seq(field("name", $.identifier), ":", field("type", $._type)),

        variadic_parameter: ($) => "...",

        // test "name" { body }
        block: ($) => seq("{", repeat($._statement), "}"),

        _statement: ($) =>
            choice(
                $.value_declaration,
                $.variable_declaration,
                $.if_statement,
                $.for_statement,
                $.return_statement,
                $.break_statement,
                $.continue_statement,
                $.defer_statement,
                $.asm_statement,
                $.comptime_if_statement,
                $.comptime_expression_statement,
                // bare { ... } scope block
                $.block,
                $.expression_statement,
            ),

        expression_statement: ($) => prec.right(-1, seq($._expression, ";")),

        // if (cond) { body } [or (cond) { body }]* [or { body }]
        _expression: ($) =>
            choice(
                $.assignment_expression,
                $.binary_expression,
                $.unary_expression,
                $.cast_expression,
                $.typed_literal,
                $.array_literal,
                $.record_literal,
                $.union_literal,
                $.comptime_expression,
                $._postfix_expression,
            ),

        // _postfix_expression groups call, index, field access, and primary
        // atoms into a single left-recursive chain. This ensures the LR parser
        // keeps [ ( . as valid shifts after reducing an identifier, rather than
        // eagerly reducing through _expression into expression_statement.
        _postfix_expression: ($) =>
            choice(
                $.call_expression,
                $.index_expression,
                $.field_expression,
                $.parenthesized_expression,
                $._primary_expression,
            ),

        assignment_expression: ($) =>
            prec.right(
                PREC.ASSIGNMENT,
                seq(
                    field("left", $._expression),
                    "=",
                    field("right", $._expression),
                ),
            ),

        // a + b, a && b, etc.
        binary_expression: ($) => {
            const table = [
                [PREC.LOGICAL_OR, "||"],
                [PREC.LOGICAL_AND, "&&"],
                [PREC.BITWISE_OR, "|"],
                [PREC.BITWISE_XOR, "^"],
                [PREC.BITWISE_AND, "&"],
                [PREC.EQUALITY, choice("==", "!=")],
                [PREC.COMPARISON, choice("<", ">", "<=", ">=")],
                [PREC.SHIFT, choice("<<", ">>")],
                [PREC.TERM, choice("+", "-")],
                [PREC.FACTOR, choice("*", "/", "%")],
            ];

            return choice(
                ...table.map(([prec_level, operator]) =>
                    prec.left(
                        prec_level,
                        seq(
                            field("left", $._expression),
                            field("operator", operator),
                            field("right", $._expression),
                        ),
                    ),
                ),
            );
        },

        // !x, -x, ~x, ?x, @x
        unary_expression: ($) =>
            prec(
                PREC.UNARY,
                seq(
                    field("operator", choice("!", "-", "~", "?", "@")),
                    field("operand", $._expression),
                ),
            ),

        // expr::type
        cast_expression: ($) =>
            prec.left(
                PREC.CAST,
                seq(
                    field("value", $._expression),
                    "::",
                    field("type", $._type),
                ),
            ),

        // expr(args) or expr[types](args)
        // Takes _postfix_expression so it chains left-recursively with other
        // postfix operations (index, field) without going through _expression.
        call_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("function", $._postfix_expression),
                    optional($.type_arguments),
                    $.argument_list,
                ),
            ),

        type_arguments: ($) => seq("[", sep1($._type, ","), "]"),

        argument_list: ($) => seq("(", optional(sep1($._expression, ",")), ")"),

        // expr[index]
        index_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    "[",
                    field("index", $._expression),
                    "]",
                ),
            ),

        // expr.field
        field_expression: ($) =>
            prec.left(
                PREC.POSTFIX,
                seq(
                    field("object", $._postfix_expression),
                    ".",
                    field("field", $.identifier),
                ),
            ),

        // (expr)
        parenthesized_expression: ($) => seq("(", $._expression, ")"),

        // Type{ field: value, ... } or GenericType[T]{ field: value, ... }
        typed_literal: ($) =>
            prec.dynamic(
                1,
                seq(
                    field("type", choice($.identifier, $.generic_type)),
                    $.initializer_list,
                ),
            ),

        // [N]Type{ values }
        initializer_list: ($) =>
            seq(
                "{",
                optional(sep1($.initializer_field, ",")),
                optional(","),
                "}",
            ),

        initializer_field: ($) =>
            choice(
                seq(
                    field("name", $.identifier),
                    ":",
                    field("value", $._expression),
                ),
                field("value", $._expression),
            ),

        // ...
        _type: ($) =>
            choice(
                $.primitive_type,
                $.pointer_type,
                $.readonly_pointer_type,
                $.array_type,
                $.function_type,
                $.generic_type,
                $.record_type,
                $.union_type,
                $.type_identifier,
            ),

        primitive_type: ($) =>
            choice(
                "u8",
                "u16",
                "u32",
                "u64",
                "i8",
                "i16",
                "i32",
                "i64",
                "f32",
                "f64",
                "ptr",
            ),

        // *type
        pointer_type: ($) => prec.left(seq("*", $._type)),

        // &type
        generic_type: ($) =>
            seq(
                field("name", choice($.identifier, $.type_identifier)),
                "[",
                sep1($._type, ","),
                "]",
            ),

        // Anonymous rec { ... } used as type
        type_identifier: ($) => sep1($.identifier, "."),

        // =========================================================================
        // Literals
        // =========================================================================

        // Integer literals: decimal, hex, binary, octal, with optional underscores
        // and optional numeric type suffix (u8, i64, f32, etc.)
        //
        // Examples: 42, 0xFF, 0b1010, 0o77, 1_000_000, 42i64, 0xFFu32
        integer_literal: ($) =>
            token(
                choice(
                    // Hex with optional suffix
                    seq(
                        "0",
                        choice("x", "X"),
                        /[0-9a-fA-F][0-9a-fA-F_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Binary with optional suffix
                    seq(
                        "0",
                        choice("b", "B"),
                        /[01][01_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Octal with optional suffix
                    seq(
                        "0",
                        choice("o", "O"),
                        /[0-7][0-7_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Decimal with optional suffix
                    seq(/[0-9][0-9_]*/, optional(TYPE_SUFFIX)),
                ),
            ),

        // Float literals: must contain a decimal point, with optional exponent
        // and optional numeric type suffix.
        //
        // Examples: 3.14, 1.0, 0.5e10, 1.5E-3, 3.14f64, 1_000.5_0
        char_literal: ($) =>
            token(
                seq(
                    "'",
                    choice(
                        // Simple escape sequences
                        /\\['"\\ntr0]/,
                        // Hex escape: \xNN
                        /\\x[0-9a-fA-F]{2}/,
                        // Any single character except backslash and single quote
                        /[^'\\]/,
                    ),
                    "'",
                ),
            ),

        // String literals: "..." with escape sequences.
        // Includes single-line strings and triple-quoted multiline strings.
        //
        // Single-line: "hello\nworld"
        // Multiline:   """multi
        //                 line"""
        //
        // Escape sequences: \n \t \r \\ \' \" \0 \xNN
        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    },
});

/**
 * Comma-separated list of one or more items.
 */
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
